@@ -7,7 +7,7 @@ add_compile_options(-g -O3 -Wctor-dtor-privacy -Wreorder -Wold-style-cast -Wsign
 set(BASE_SRC wedge/base/normalform.cpp wedge/base/logging.cpp wedge/base/utilities.cpp  wedge/base/wexception.cpp wedge/base/wedgealgebraic.cpp wedge/base/utilities.cpp)
 set(CONNECTIONS_SRC wedge/connections/connection.cpp wedge/connections/transverseconnection.cpp)
 set(CONVENIENCE_SRC wedge/convenience/latex.cpp wedge/convenience/canonicalprint.cpp wedge/convenience/omitfunctionargument.cpp wedge/convenience/parse.cpp wedge/convenience/simplifier.cpp)
-set(LIE_ALGEBRAS_SRC wedge/liealgebras/liegroup.cpp wedge/liealgebras/liesubgroup.cpp)
+set(LIE_ALGEBRAS_SRC  wedge/liealgebras/derivations.cpp wedge/liealgebras/liegroup.cpp wedge/liealgebras/liesubgroup.cpp)
 set(LINEARALGEBRA_SRC wedge/linearalgebra/bilinearform.cpp wedge/linearalgebra/ginaclinalg.cpp)
 set(MANIFOLDS_SRC wedge/manifolds/manifold.cpp wedge/manifolds/function.cpp wedge/manifolds/differentialform.cpp wedge/manifolds/liederivative.cpp  wedge/manifolds/fderivative.cpp)
 set(POLY_SRC wedge/polynomialalgebra/polybasis.cpp)
@@ -23,7 +23,7 @@ target_include_directories(wedge PUBLIC ${GINAC_DIR} ${GINAC_DIR}/ginac)
 set(BASE_HDR wedge/base/classname.h wedge/base/logging.h wedge/base/expressions.h wedge/base/normalform.h wedge/base/parameters.h wedge/base/utilities.h wedge/base/wedgealgebraic.h wedge/base/wedgebase.h wedge/base/wexception.h)
 set(CONNECTIONS_HDR wedge/connections/connection.h wedge/connections/pseudolevicivita.h wedge/connections/riemannianconnection.h wedge/connections/torsionfreeconnection.h wedge/connections/transverseconnection.h)
 set(CONVENIENCE_HDR wedge/convenience/latex.h wedge/convenience/canonicalprint.h wedge/convenience/named.h wedge/convenience/omitfunctionargument.h wedge/convenience/parse.h wedge/convenience/printcontext.h wedge/convenience/simplifier.h wedge/convenience/spiritgrammars.hpp wedge/convenience/spiritsemanticactions.hpp)
-set(LIE_ALGEBRAS_HDR wedge/liealgebras/liegroup.h wedge/liealgebras/liegroupextension.h wedge/liealgebras/liegroupstructures.h wedge/liealgebras/liesubgroup.h wedge/liealgebras/so.h wedge/liealgebras/su.h)
+set(LIE_ALGEBRAS_HDR wedge/liealgebras/derivations.h wedge/liealgebras/liegroup.h wedge/liealgebras/liegroupextension.h wedge/liealgebras/liegroupstructures.h wedge/liealgebras/liesubgroup.h wedge/liealgebras/so.h wedge/liealgebras/su.h)
 set(LINEAR_ALGEBRA_HDR wedge/linearalgebra/affinebasis.h wedge/linearalgebra/anylinalg.h wedge/linearalgebra/basis.h wedge/linearalgebra/bilinear.h wedge/linearalgebra/bilinearform.h wedge/linearalgebra/derivation.h wedge/linearalgebra/ginaclinalg.h wedge/linearalgebra/lambda.h wedge/linearalgebra/leibniz.h wedge/linearalgebra/linear.h wedge/linearalgebra/linearcombinations.h wedge/linearalgebra/pforms.h wedge/linearalgebra/tensor.h wedge/linearalgebra/tensorlambda.h wedge/linearalgebra/vectorspace.h)
 set(MANIFOLDS_HDR wedge/manifolds/concretemanifold.h wedge/manifolds/coordinates.h wedge/manifolds/differentialform.h wedge/manifolds/fderivative.h wedge/manifolds/function.h wedge/manifolds/liederivative.h wedge/manifolds/manifold.h wedge/manifolds/manifoldwith.h)
 set(POLY_HDR wedge/polynomialalgebra/cocoapolyalg.h wedge/polynomialalgebra/polybasis.h)
