@@ -196,4 +196,5 @@ Removed:
   LieGroup::canonical_print returns reference to ostream
   ParseDifferentialForms now accepts letters a-z and A-Z for dimensions up to 61, and throws ParseError on out-of-bounds errors.
   Named constructor idiom is now used in PseudoRiemannianStructureByMatrix to prevent ambiguity
-  
+Added:
+ function derivations
